Fix: Scrolling on tablets

--- a/webui/style.css
+++ b/webui/style.css
@@ -1599,7 +1599,18 @@ ul.help > li {
 	display: flex;
 	overflow: hidden;
 	padding-top: 15px;
-    height: calc(100vh - 70px);
+}
+
+.config-loading-alert {
+	margin-top: 15px;
+}
+
+#DownloadsTab,
+#HistoryTab,
+#StatisticsTab,
+#MessagesTab,
+.config__container {
+	height: calc(100vh - 70px);
 }
 
 #DownloadsTab,
@@ -1607,7 +1618,6 @@ ul.help > li {
 #StatisticsTab,
 #MessagesTab {
 	overflow: auto;
-	height: calc(100vh - 70px);
 	padding-top: 15px;
 }
 
@@ -1621,6 +1631,20 @@ ul.help > li {
 	width: 100%;
 	padding: 0 15px;
 	overflow: auto;
+}
+
+@media (max-width: 1028px) {
+	.container-fluid {
+		padding: 0 10px;
+	}
+
+	#DownloadsTab,
+	#HistoryTab,
+	#StatisticsTab,
+	#MessagesTab,
+	.config__container {
+		height: calc(100vh - 100px);
+	}
 }
 
 @media (max-width: 960px) {
@@ -1641,16 +1665,22 @@ ul.help > li {
 	#DownloadsTab,
 	#HistoryTab,
 	#StatisticsTab,
+	#MessagesTab,
+	.config__container {
+		height: 100%;
+	}
+
+	#DownloadsTab,
+	#HistoryTab,
+	#StatisticsTab,
 	#MessagesTab {
 		overflow: auto;
-		height: 100%;
 		padding-top: 10px;
 	}
 
 	.config__container {
 		display: flex;
 		flex-direction: column;
-		height: 100%;
 		gap: 0px;
 		padding-top: 10px;
 		overflow-y: auto;
